# bayesianadaptivemodels

./: README.md  setup.cfg  setup.py
bayesianadaptivemodels/: __init__.py  adaptive_models.py
