[metadata]
name = bayesian-adaptive-models
version = 0.0.1
author = Hugo Dolan
author_email = hugojdolan@gmail.com
description = Bayseian Adaptive Timeseries Modelling Tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hugo1005/bats
project_urls =
    Bug Tracker = https://github.com/hugo1005/bats/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
